--- a/home.html
+++ b/home.html
@@ -19,6 +19,10 @@
     <body>
         <h1>Titolo della Pagina</h1>
 
+        <header>
+            
+        </header>
+
         <div style="float: left; width: 50%; border: 1px solid red;">
             <a href="chi-sono.html" title="Vai alla pagina">Vai alla pagina chi sono</a><br>
             <a href="chi-sono.html" title="Vai alla pagina" target="_blank">Vai alla pagina chi sono (Nuovo tab)</a><br>
