--- a/home-css.html
+++ b/home-css.html
@@ -11,7 +11,7 @@
     <body>
         <div>
             <h1 style="color: red;">Titolo contenuto</h1>
-            <p>
+            <p id="paragrafo" class="rosso grassetto maiuscolo">
                 Lorem ipsum...<br>
                 <a href="#">link nel paragrafo</a>
             </p>    
