--- a/home-mediaquery.html
+++ b/home-mediaquery.html
@@ -1,18 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="css/style.css"></link>
-        <style>
-            p {
-                color: #b0b0b0;
-            }
-        </style>
+        <link rel="stylesheet" href="css/style-css3.css"></link>
     </head>
     <body>
-        <div id="div1">test</div>
-        <div id="div2">test</div>
         <div>
-            <h1 style="color: red;">Titolo contenuto</h1>
+            <h1>Titolo contenuto</h1>
             <p id="paragrafo" class="rosso grassetto maiuscolo">
                 Lorem ipsum...<br>
                 <a href="#">link nel paragrafo</a>
